# LabAiSD4

./: CMakeLists.txt  README.md  main.cc  result.xlsx
include/: experiment.h  generator.h  search_tree.h  task.h  tree_node.h
src/: experiment.cc  generator.cc  main.cc  search_tree.cc  task.cc
